fix z-index of module

--- a/HMS.WebApp/src/app/components/sidebar/sidebar.component.css
+++ b/HMS.WebApp/src/app/components/sidebar/sidebar.component.css
@@ -2,3 +2,7 @@
     padding: 0;
     border: none;
 }
+
+.layout-navbar-fixed .wrapper .main-header {
+    z-index: 1;
+}
