--- a/HMS.WebApp/src/styles.css
+++ b/HMS.WebApp/src/styles.css
@@ -4,5 +4,17 @@
     padding: 0;
     border: none;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.cdk-overlay-container {
+    z-index: 10000;
+}
